Adding new update baptism endpoint
